--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    //Circular ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
