--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.2'
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -64,6 +64,12 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
+
+    //ViewPager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    //Material Design
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
 
     kapt 'com.android.databinding:compiler:3.1.4'
 
